--- a/test.ipynb
+++ b/test.ipynb
@@ -22,7 +22,7 @@
     "from cad_viewer_widget import CadViewer, AnimationTrack\n",
     "from sidecar import Sidecar\n",
     "\n",
-    "names = [\"hexapod\", \"hexapod_m\", \"box\", \"box1\", \"boxes\", \"edges\", \"faces\", \"vertices\"]\n",
+    "names = [\"hexapod\", \"hexapod_m\", \"box\", \"box1\", \"boxes\", \"edges\", \"faces\", \"vertices\", \"pylones\", \"box-edges\", \"box-faces\", \"box-vertices\"]\n",
     "objects = {}\n",
     "states = {}\n",
     "\n",
@@ -45,6 +45,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "08cbeb2c-e0bb-41ee-9399-8b5fdf6eb84c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv1 = CadViewer(\n",
+    "    cad_width=640, \n",
+    "    height=480, \n",
+    "    tools=True,\n",
+    "    pinning=True,\n",
+    ")\n",
+    "name = \"hexapod\"\n",
+    "cv1.add_shapes(\n",
+    "        objects[name],\n",
+    "        states[name],\n",
+    "        ortho=False,\n",
+    "        control=\"orbit\",\n",
+    "        grid=(False, False, False),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a081c018-0357-43e0-8c83-337179bafeb3",
    "metadata": {},
    "outputs": [],
@@ -53,22 +76,15 @@
     "    cad_width=640, \n",
     "    height=480, \n",
     "    tools=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "628eeeaa-2e2c-4e59-b280-3c647a58cb11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    pinning=True\n",
+    ")\n",
+    "name = \"faces\"\n",
     "cv2.add_shapes(\n",
-    "        objects[\"hexapod\"],\n",
-    "        states[\"hexapod\"],\n",
-    "        ortho=False,\n",
-    "        control=\"orbit\",\n",
-    "        grid=(True, False, True)\n",
+    "    objects[name],\n",
+    "    states[name],\n",
+    "    ortho=False,\n",
+    "    control=\"orbit\",\n",
+    "    grid=(False, False, False),\n",
     ")"
    ]
   },
@@ -97,9 +113,7 @@
     "    cv = CadViewer(\n",
     "        cad_width=640, \n",
     "        height=480, \n",
-    "        tree_width=250, \n",
-    "        theme=\"light\", \n",
-    "        tools=True\n",
+    "        theme=\"light\"\n",
     "    )"
    ]
   },
@@ -649,6 +663,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3a7ddab6-da5e-4f05-a189-b8157593f099",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[a.to_array() for a in cv.tracks]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "69ee5825-ec43-422d-903f-bed194c15aa6",
    "metadata": {},
    "outputs": [],
@@ -673,7 +697,85 @@
    "source": [
     "import json\n",
     "from IPython.display import Javascript, HTML\n",
-    "from cad_viewer_widget.utils import serializer"
+    "from cad_viewer_widget.utils import serializer\n",
+    "from uuid import uuid4\n",
+    " \n",
+    "def embed(\n",
+    "    shapes, states, cad_width=800, height=600, tree_width=240, theme=\"light\", tools=True, \n",
+    "    tracks=None, ortho=True, control=\"trackball\", axes=False, axes0=False, grid=None, ticks=10, normal_len=0, \n",
+    "    transparent=False, black_edges=False, edge_color=\"#707070\", ambient_intensity=0.9, direct_intensity=0.12, \n",
+    "    position=None, quaternion=None, zoom=None, \n",
+    "    reset_camera=True, zoom_speed=1.0, pan_speed=1.0, rotate_speed=1.0):\n",
+    "    \n",
+    "    uid = str(uuid4())\n",
+    "    display(HTML(f\"\"\"\n",
+    "        <div id='cad_view_{uid}'></div>\n",
+    "        <script type=\"text/javascript\">\n",
+    "           console.log(\"XXX\");\n",
+    "        </script>\n",
+    "    \"\"\"))\n",
+    "    if grid is None:\n",
+    "        grid_js = '[false, false, false]'\n",
+    "    else:\n",
+    "        grid_js = json.dumps(grid)\n",
+    "        \n",
+    "    display(Javascript(\n",
+    "    f\"\"\"\n",
+    "    function render() {{\n",
+    "        const options = {{\n",
+    "            theme: \"{theme}\",\n",
+    "            ortho: {json.dumps(ortho)},\n",
+    "            control: \"{control}\",\n",
+    "            tools: {json.dumps(tools)},\n",
+    "            normalLen: {normal_len},\n",
+    "            cadWidth: {cad_width},\n",
+    "            height: {height},\n",
+    "            treeWidth: {tree_width},\n",
+    "            ticks: {ticks},\n",
+    "            normalLen: {normal_len},\n",
+    "            edgeColor: \"{edge_color}\",\n",
+    "            ambientIntensity: {ambient_intensity},\n",
+    "            directIntensity: {direct_intensity},\n",
+    "            transparent: {json.dumps(transparent)},\n",
+    "            blackEdges: {json.dumps(black_edges)},\n",
+    "            axes: {json.dumps(axes)},\n",
+    "            grid: {grid_js}, \n",
+    "            rotateSpeed: {rotate_speed},\n",
+    "            panSpeed: {pan_speed},\n",
+    "            zoomSpeed: {zoom_speed}\n",
+    "        }};\n",
+    "        console.log(options)\n",
+    "\n",
+    "        const container = document.getElementById(\"cad_view_{uid}\");\n",
+    "        const display = new CadViewer.Display(container, options);\n",
+    "        display.setAnimationControl(false)\n",
+    "        \n",
+    "        const shapes = {shapes};\n",
+    "        const states = {states};\n",
+    "        const viewer = new CadViewer.Viewer(display, options);\n",
+    "        const tessAndTree = viewer.renderTessellatedShapes(shapes, states);\n",
+    "        viewer.render(\n",
+    "            ...tessAndTree, states,\n",
+    "            {json.dumps(position)},\n",
+    "            {json.dumps(quaternion)},\n",
+    "            {json.dumps(zoom)}\n",
+    "        )\n",
+    "    }}\n",
+    "    console.log(\"INIT\")\n",
+    "    var viewerLib = document.createElement('script');\n",
+    "    viewerLib.type = 'text/javascript';\n",
+    "    viewerLib.src = 'https://unpkg.com/three-cad-viewer@1.0.0/dist/three-cad-viewer.js'\n",
+    "\n",
+    "    if(window.CadViewer == null) {{\n",
+    "        console.log(\"Loading three-cad-viewer ...\")\n",
+    "        viewerLib.onload = () => {{\n",
+    "            render()\n",
+    "        }}\n",
+    "        document.head.appendChild(viewerLib);\n",
+    "    }} else {{\n",
+    "       render()\n",
+    "    }}\n",
+    "    \"\"\"))"
    ]
   },
   {
@@ -683,56 +785,107 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(Javascript(\"\"\"\n",
-    "var script = document.createElement('script');\n",
-    "script.type = 'text/javascript';\n",
-    "script.src = 'http://banach:8888/lab/extensions/cad-viewer-widget/static/lib_index_js.b616f2d187f2f136095a.js';\n",
-    "document.head.appendChild(script);\n",
-    "\"\"\"))"
+    "name = \"box1\"\n",
+    "sh = json.dumps(objects[name], default=serializer)\n",
+    "st = json.dumps(states[name])\n",
+    "\n",
+    "embed(sh, st, tools=False, axes=True, transparent=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5a552fb-d512-42b2-af89-c459199a6f72",
+   "id": "8da5cfbf-dd9a-41aa-acc7-e692ba9c789f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "shapes = json.dumps(objects[\"box1\"], default=serializer)\n",
-    "states2 = json.dumps(states[\"box1\"])\n",
+    "import ipywidgets as w\n",
+    "w.IntSlider(3,0,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd34f945-4dff-4daf-9f6a-deb31a5dc017",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eaf8651-5511-48f3-b19a-22a9ec8fe329",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import zlib\n",
+    "from base64 import b64encode\n",
     "\n",
-    "display(HTML(\"<div id='cad_view'></div>\"))\n",
+    "class ShapeEncode(json.JSONEncoder):\n",
+    "    def default(self, obj):\n",
+    "        print(type(obj))\n",
+    "        def compress(obj, dtype):\n",
+    "            cobj = zlib.compress(obj.reshape(-1).astype(dtype).tobytes(order=\"C\"))\n",
+    "            return b64encode(cobj).decode()\n",
     "\n",
-    "display(Javascript(f\"\"\"\n",
-    "const options = {{\n",
-    "    theme: \"light\",\n",
-    "    ortho: true,\n",
-    "    control: \"trackball\",\n",
-    "    // control: \"orbit\",\n",
-    "    normalLen: 0,\n",
-    "    cadWidth: 800,\n",
-    "    height: 600,\n",
-    "    treeWidth: 240,\n",
-    "    ticks: 10,\n",
-    "    normalLen: 0,\n",
-    "    ambientIntensity: 0.9,\n",
-    "    directIntensity: 0.12,\n",
-    "    transparent: false,\n",
-    "    blackEdges: false,\n",
-    "    axes: true,\n",
-    "    grid: [false, false, false], \n",
-    "    timeit: false,\n",
-    "    rotateSpeed: 1\n",
-    "}};\n",
-    "\n",
-    "const container = document.getElementById(\"cad_view\");\n",
-    "const display = new Display(container, options);\n",
-    "display.setAnimationControl(false)\n",
-    "const shapes = JSON.parse('{shapes}');\n",
-    "const states = JSON.parse('{states2}');\n",
-    "console.log(shapes)\n",
-    "console.log(states)\n",
-    "\"\"\"))\n"
+    "        if isinstance(obj, np.ndarray):\n",
+    "            if obj.dtype in (np.float32, np.float64):\n",
+    "                return (\"_f32\", obj.shape, compress(obj, \"float32\"))\n",
+    "            elif obj.dtype in (np.int32, np.int64):\n",
+    "                return (\"_i32\", obj.shape, compress(obj, \"int32\"))\n",
+    "            else:\n",
+    "                raise Exception(\"unknown numpy type\")\n",
+    "        raise TypeError(\"Unknown type:\", type(obj))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27e5e75a-14ec-46fa-b229-a9b9c3bf5587",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "name=\"hexapod\"\n",
+    "len(b64encode(zlib.compress(json.dumps(objects[name]).encode(\"utf-8\"))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b4e66bb-36d3-4c42-8460-e0a6b0704072",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(json.dumps(objects[name]).encode(\"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "640588b9-4f1e-4b68-82af-9e9208d2f2d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"<div id='cad_view_{23}' onload='console.log(\\\"XXX\\\")'></div>\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c22270e1-a982-4ede-8089-59ffcf254d5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def complex_encoder(z):\n",
+    "    print(z)\n",
+    "    if isinstance(z, complex):\n",
+    "        return (z.real, z.imag)\n",
+    "    else:\n",
+    "        type_name = z.__class__.__name__\n",
+    "        raise TypeError(f\"Object of type {type_name} is not serializable\")\n",
+    "        \n",
+    "json.dumps(4+6j, default=complex_encoder)"
    ]
   },
   {
@@ -748,30 +901,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27b24d61-ef0a-414f-af47-decdc2ecb547",
+   "id": "c95d40a2-8116-403c-9547-0e58b7278db7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"[[\\\"/bottom/right_front\\\", \\\"rz\\\", [0.0, 1.0, 2.0, 3.0, 4.0], [0, -25, 0, 25, 0]], [\\\"/bottom/left_middle\\\", \\\"rz\\\", [0.0, 1.0, 2.0, 3.0, 4.0], [0, 25, 0, -25, 0]], [\\\"/bottom/left_front\\\", \\\"rz\\\", [0.0, 1.0, 2.0, 3.0, 4.0], [0, -25, 0, 25, 0]], [\\\"/bottom/right_middle\\\", \\\"rz\\\", [0.0, 1.0, 2.0, 3.0, 4.0], [0, 25, 0, -25, 0]], [\\\"/bottom/left_back\\\", \\\"rz\\\", [0.0, 1.0, 2.0, 3.0, 4.0], [0, -25, 0, 25, 0]], [\\\"/bottom/right_back\\\", \\\"rz\\\", [0.0, 1.0, 2.0, 3.0, 4.0], [0, -25, 0, 25, 0]], [\\\"/bottom/right_front/lower\\\", \\\"rz\\\", [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0], [-15.0, -15.0, -15.0, 9.7, 20.0, 9.7, -15.0, -15.0, -15.0]], [\\\"/bottom/left_middle/lower\\\", \\\"rz\\\", [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0], [-15.0, -15.0, -15.0, 9.7, 20.0, 9.7, -15.0, -15.0, -15.0]], [\\\"/bottom/left_front/lower\\\", \\\"rz\\\", [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0], [20.0, 9.7, -15.0, -15.0, -15.0, -15.0, -15.0, 9.7, 20.0]], [\\\"/bottom/right_middle/lower\\\", \\\"rz\\\", [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0], [20.0, 9.7, -15.0, -15.0, -15.0, -15.0, -15.0, 9.7, 20.0]], [\\\"/bottom/left_back/lower\\\", \\\"rz\\\", [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0], [20.0, 9.7, -15.0, -15.0, -15.0, -15.0, -15.0, 9.7, 20.0]], [\\\"/bottom/right_back/lower\\\", \\\"rz\\\", [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0], [-15.0, -15.0, -15.0, 9.7, 20.0, 9.7, -15.0, -15.0, -15.0]]]\")"
+    "import ipywidgets as w\n",
+    "out = w.Output()\n",
+    "out"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ae4587f-a138-4a2e-bdaa-b75408c6f9f5",
+   "id": "69419535-6e1c-4750-8926-e5128e765773",
    "metadata": {},
    "outputs": [],
    "source": [
-    "0xe8/255, 0xb0/255, 0x24/255"
+    "from PIL import Image, ImageDraw\n",
+    "\n",
+    "def line(output_path):\n",
+    "    image = Image.new(\"RGB\", (400, 400), \"lightgray\")\n",
+    "    points = [(100, 100), (150, 200), (200, 50), (400, 400)]\n",
+    "    draw = ImageDraw.Draw(image)\n",
+    "    draw.line(points, width=15, fill=\"green\", joint=\"curve\")\n",
+    "    return image\n",
+    "\n",
+    "with out:\n",
+    "    display(line(\"jointed_lines.jpg\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f731fb30-5e3f-4af8-a1dc-f7ad14a5ea7a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
