adapt all tests

--- a/test.ipynb
+++ b/test.ipynb
@@ -19,8 +19,8 @@
     "import json\n",
     "import time\n",
     "import ipywidgets as widgets\n",
-    "from cad_viewer_widget import CadViewer, AnimationTrack\n",
-    "from sidecar import Sidecar\n",
+    "from cad_viewer_widget import open_viewer, close_viewer, close_viewers, AnimationTrack\n",
+    "from cad_viewer_widget.utils import numpyify\n",
     "\n",
     "names = [\"hexapod\", \"hexapod_m\", \"box\", \"box1\", \"boxes\", \"edges\", \"faces\", \"vertices\", \"pylones\", \"box-edges\", \"box-faces\", \"box-vertices\"]\n",
     "objects = {}\n",
@@ -28,10 +28,84 @@
     "\n",
     "for name in names:\n",
     "    with open(f\"examples/{name}.json\", \"r\") as fd:\n",
-    "        objects[name] = json.load(fd)\n",
+    "        objects[name] = numpyify(json.load(fd))\n",
     "\n",
     "    with open(f\"examples/{name}-states.json\", \"r\") as fd:\n",
     "        states[name] = json.load(fd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00ebe6aa-9c7e-4ed3-8984-9b45427a1755",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv1 = open_viewer(cad_width=640, height=480, sidecar=\"Test\", anchor=\"split-right\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c843b4e2-f6b3-4ba7-bf9e-db5694d07181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2 = open_viewer(cad_width=640, height=480, sidecar=\"Test2\", anchor=\"split-bottom\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84ccf77a-8deb-4931-81ec-6bdfdbbc2f72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"boxes\"\n",
+    "cv1.add_shapes(\n",
+    "        objects[name],\n",
+    "        states[name],\n",
+    "        ortho=False,\n",
+    "        control=\"trackball\",\n",
+    "        grid=(False, False, False),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f815ad6-349a-4617-adea-944d3d10c8eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"hexapod\"\n",
+    "cv2.add_shapes(\n",
+    "        objects[name],\n",
+    "        states[name],\n",
+    "        ortho=False,\n",
+    "        control=\"trackball\",\n",
+    "        grid=(False, False, False),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "172f4b6f-e219-45cb-8f67-0ecec7813141",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "close_viewer(\"Test2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc4a0671-197a-4d0a-b976-5e8ff28cc026",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "close_viewers()"
    ]
   },
   {
@@ -49,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv1 = CadViewer(\n",
+    "cv1 = open_viewer(\n",
     "    cad_width=640, \n",
     "    height=480, \n",
     "    tools=True,\n",
@@ -72,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv2 = CadViewer(\n",
+    "cv2 = open_viewer(\n",
     "    cad_width=640, \n",
     "    height=480, \n",
     "    tools=True,\n",
@@ -107,14 +181,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc = Sidecar(title=\"Tests\")\n",
-    "\n",
-    "with sc:\n",
-    "    cv = CadViewer(\n",
-    "        cad_width=640, \n",
-    "        height=480, \n",
-    "        theme=\"light\"\n",
-    "    )"
+    "cv = open_viewer(\n",
+    "    cad_width=640, height=480, \n",
+    "    sidecar=\"Examples\", anchor=\"split-right\"\n",
+    ")"
    ]
   },
   {
@@ -157,7 +227,7 @@
     "        ortho=True,\n",
     "        control=\"trackball\",\n",
     "        ticks=20,\n",
-    "        axes=True,\n",
+    "    #    axes=True,\n",
     "        axes0=False,\n",
     "        grid=[True, False, False], \n",
     "        transparent=False,\n",
@@ -663,16 +733,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a7ddab6-da5e-4f05-a189-b8157593f099",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[a.to_array() for a in cv.tracks]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "69ee5825-ec43-422d-903f-bed194c15aa6",
    "metadata": {},
    "outputs": [],
@@ -682,100 +742,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59d2fa28-d44d-4911-8b61-6f4284507643",
+   "id": "fe96062a-b8fc-4b29-99e1-60b266793cba",
    "metadata": {},
    "source": [
-    "# No Widget, Javascript only"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdfaa79e-3e14-4a49-b329-9ea73db934f8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "from IPython.display import Javascript, HTML\n",
-    "from cad_viewer_widget.utils import serializer\n",
-    "from uuid import uuid4\n",
-    " \n",
-    "def embed(\n",
-    "    shapes, states, cad_width=800, height=600, tree_width=240, theme=\"light\", tools=True, \n",
-    "    tracks=None, ortho=True, control=\"trackball\", axes=False, axes0=False, grid=None, ticks=10, normal_len=0, \n",
-    "    transparent=False, black_edges=False, edge_color=\"#707070\", ambient_intensity=0.9, direct_intensity=0.12, \n",
-    "    position=None, quaternion=None, zoom=None, \n",
-    "    reset_camera=True, zoom_speed=1.0, pan_speed=1.0, rotate_speed=1.0):\n",
-    "    \n",
-    "    uid = str(uuid4())\n",
-    "    display(HTML(f\"\"\"\n",
-    "        <div id='cad_view_{uid}'></div>\n",
-    "        <script type=\"text/javascript\">\n",
-    "           console.log(\"XXX\");\n",
-    "        </script>\n",
-    "    \"\"\"))\n",
-    "    if grid is None:\n",
-    "        grid_js = '[false, false, false]'\n",
-    "    else:\n",
-    "        grid_js = json.dumps(grid)\n",
-    "        \n",
-    "    display(Javascript(\n",
-    "    f\"\"\"\n",
-    "    function render() {{\n",
-    "        const options = {{\n",
-    "            theme: \"{theme}\",\n",
-    "            ortho: {json.dumps(ortho)},\n",
-    "            control: \"{control}\",\n",
-    "            tools: {json.dumps(tools)},\n",
-    "            normalLen: {normal_len},\n",
-    "            cadWidth: {cad_width},\n",
-    "            height: {height},\n",
-    "            treeWidth: {tree_width},\n",
-    "            ticks: {ticks},\n",
-    "            normalLen: {normal_len},\n",
-    "            edgeColor: \"{edge_color}\",\n",
-    "            ambientIntensity: {ambient_intensity},\n",
-    "            directIntensity: {direct_intensity},\n",
-    "            transparent: {json.dumps(transparent)},\n",
-    "            blackEdges: {json.dumps(black_edges)},\n",
-    "            axes: {json.dumps(axes)},\n",
-    "            grid: {grid_js}, \n",
-    "            rotateSpeed: {rotate_speed},\n",
-    "            panSpeed: {pan_speed},\n",
-    "            zoomSpeed: {zoom_speed}\n",
-    "        }};\n",
-    "        console.log(options)\n",
-    "\n",
-    "        const container = document.getElementById(\"cad_view_{uid}\");\n",
-    "        const display = new CadViewer.Display(container, options);\n",
-    "        display.setAnimationControl(false)\n",
-    "        \n",
-    "        const shapes = {shapes};\n",
-    "        const states = {states};\n",
-    "        const viewer = new CadViewer.Viewer(display, options);\n",
-    "        const tessAndTree = viewer.renderTessellatedShapes(shapes, states);\n",
-    "        viewer.render(\n",
-    "            ...tessAndTree, states,\n",
-    "            {json.dumps(position)},\n",
-    "            {json.dumps(quaternion)},\n",
-    "            {json.dumps(zoom)}\n",
-    "        )\n",
-    "    }}\n",
-    "    console.log(\"INIT\")\n",
-    "    var viewerLib = document.createElement('script');\n",
-    "    viewerLib.type = 'text/javascript';\n",
-    "    viewerLib.src = 'https://unpkg.com/three-cad-viewer@1.0.0/dist/three-cad-viewer.js'\n",
-    "\n",
-    "    if(window.CadViewer == null) {{\n",
-    "        console.log(\"Loading three-cad-viewer ...\")\n",
-    "        viewerLib.onload = () => {{\n",
-    "            render()\n",
-    "        }}\n",
-    "        document.head.appendChild(viewerLib);\n",
-    "    }} else {{\n",
-    "       render()\n",
-    "    }}\n",
-    "    \"\"\"))"
+    "# Embedding (experimental)"
    ]
   },
   {
@@ -785,149 +755,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from cad_viewer_widget.embed import embed\n",
+    "\n",
     "name = \"box1\"\n",
     "sh = json.dumps(objects[name], default=serializer)\n",
     "st = json.dumps(states[name])\n",
     "\n",
     "embed(sh, st, tools=False, axes=True, transparent=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8da5cfbf-dd9a-41aa-acc7-e692ba9c789f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ipywidgets as w\n",
-    "w.IntSlider(3,0,10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd34f945-4dff-4daf-9f6a-deb31a5dc017",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6eaf8651-5511-48f3-b19a-22a9ec8fe329",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import zlib\n",
-    "from base64 import b64encode\n",
-    "\n",
-    "class ShapeEncode(json.JSONEncoder):\n",
-    "    def default(self, obj):\n",
-    "        print(type(obj))\n",
-    "        def compress(obj, dtype):\n",
-    "            cobj = zlib.compress(obj.reshape(-1).astype(dtype).tobytes(order=\"C\"))\n",
-    "            return b64encode(cobj).decode()\n",
-    "\n",
-    "        if isinstance(obj, np.ndarray):\n",
-    "            if obj.dtype in (np.float32, np.float64):\n",
-    "                return (\"_f32\", obj.shape, compress(obj, \"float32\"))\n",
-    "            elif obj.dtype in (np.int32, np.int64):\n",
-    "                return (\"_i32\", obj.shape, compress(obj, \"int32\"))\n",
-    "            else:\n",
-    "                raise Exception(\"unknown numpy type\")\n",
-    "        raise TypeError(\"Unknown type:\", type(obj))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27e5e75a-14ec-46fa-b229-a9b9c3bf5587",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "name=\"hexapod\"\n",
-    "len(b64encode(zlib.compress(json.dumps(objects[name]).encode(\"utf-8\"))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b4e66bb-36d3-4c42-8460-e0a6b0704072",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(json.dumps(objects[name]).encode(\"utf-8\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "640588b9-4f1e-4b68-82af-9e9208d2f2d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"<div id='cad_view_{23}' onload='console.log(\\\"XXX\\\")'></div>\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c22270e1-a982-4ede-8089-59ffcf254d5a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def complex_encoder(z):\n",
-    "    print(z)\n",
-    "    if isinstance(z, complex):\n",
-    "        return (z.real, z.imag)\n",
-    "    else:\n",
-    "        type_name = z.__class__.__name__\n",
-    "        raise TypeError(f\"Object of type {type_name} is not serializable\")\n",
-    "        \n",
-    "json.dumps(4+6j, default=complex_encoder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23191ae5-2c9b-4cfb-9a3e-06fa4f254fed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c95d40a2-8116-403c-9547-0e58b7278db7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ipywidgets as w\n",
-    "out = w.Output()\n",
-    "out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69419535-6e1c-4750-8926-e5128e765773",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from PIL import Image, ImageDraw\n",
-    "\n",
-    "def line(output_path):\n",
-    "    image = Image.new(\"RGB\", (400, 400), \"lightgray\")\n",
-    "    points = [(100, 100), (150, 200), (200, 50), (400, 400)]\n",
-    "    draw = ImageDraw.Draw(image)\n",
-    "    draw.line(points, width=15, fill=\"green\", joint=\"curve\")\n",
-    "    return image\n",
-    "\n",
-    "with out:\n",
-    "    display(line(\"jointed_lines.jpg\"))"
    ]
   }
  ],
