--- a/test.ipynb
+++ b/test.ipynb
@@ -19,7 +19,7 @@
     "import json\n",
     "import time\n",
     "import ipywidgets as widgets\n",
-    "from cad_viewer_widget import open_viewer, close_viewer, close_viewers, AnimationTrack\n",
+    "from cad_viewer_widget import AnimationTrack, show, open_viewer, close_viewer, close_viewers, get_viewer, get_viewers, get_default, set_viewer\n",
     "from cad_viewer_widget.utils import numpyify\n",
     "\n",
     "names = [\"hexapod\", \"hexapod_m\", \"box\", \"box1\", \"boxes\", \"edges\", \"faces\", \"vertices\", \"pylones\", \"box-edges\", \"box-faces\", \"box-vertices\"]\n",
@@ -35,73 +35,118 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00ebe6aa-9c7e-4ed3-8984-9b45427a1755",
+   "cell_type": "markdown",
+   "id": "1adc86c0-7f97-413e-852f-8abd668f30ca",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "cv1 = open_viewer(cad_width=640, height=480, sidecar=\"Test\", anchor=\"split-right\")"
+    "# Sidecar handling"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c843b4e2-f6b3-4ba7-bf9e-db5694d07181",
+   "id": "46cd76a5-9eff-495d-8c07-a1346dab1b92",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv2 = open_viewer(cad_width=640, height=480, sidecar=\"Test2\", anchor=\"split-bottom\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84ccf77a-8deb-4931-81ec-6bdfdbbc2f72",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = \"boxes\"\n",
-    "cv1.add_shapes(\n",
-    "        objects[name],\n",
-    "        states[name],\n",
-    "        ortho=False,\n",
-    "        control=\"trackball\",\n",
-    "        grid=(False, False, False),\n",
+    "name = \"edges\"\n",
+    "cv1 = show(\n",
+    "    objects[name],\n",
+    "    states[name],\n",
+    "    height=800,\n",
+    "    sidecar=\"CQ1\", #anchor=\"right\",\n",
+    "    ortho=True,\n",
+    "    control=\"trackball\",\n",
+    "    grid=(False, False, False),\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f815ad6-349a-4617-adea-944d3d10c8eb",
+   "id": "873b94da-1b47-4405-b115-e1e32e36f212",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"hexapod\"\n",
-    "cv2.add_shapes(\n",
-    "        objects[name],\n",
-    "        states[name],\n",
-    "        ortho=False,\n",
-    "        control=\"trackball\",\n",
-    "        grid=(False, False, False),\n",
+    "name = \"faces\"\n",
+    "cv2 = show(\n",
+    "    objects[name],\n",
+    "    states[name],\n",
+    "    sidecar=\"CQ2\", #anchor=\"right\",\n",
+    "    ortho=True,\n",
+    "    control=\"trackball\",\n",
+    "    grid=(False, True, False),\n",
+    "    pinning=True\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "172f4b6f-e219-45cb-8f67-0ecec7813141",
+   "id": "f40988e2-bc9b-4ce7-b58c-5d90a683b9ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "close_viewer(\"Test2\")"
+    "name = \"vertices\"\n",
+    "cv = show(objects[name], states[name])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc4a0671-197a-4d0a-b976-5e8ff28cc026",
+   "id": "53e708b6-3a9d-4d79-827c-d1c1e7d2058f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_viewers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cb4c179-8544-4188-b8cb-e21dbdcfec8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_viewer(\"CQ1\")\n",
+    "cv = show(objects[name], states[name])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a163309e-b980-4893-89fb-93141690847a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.position = cv1.position\n",
+    "cv2.quaternion = cv1.quaternion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ac3adb6-9dd5-43c9-9797-b91459813b47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "close_viewer(\"CQ1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3b810bd-a347-46f5-bcdf-90d39929cb10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "close_viewer(\"CQ2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cae0e910-021d-4023-b5e3-fcd4b76e1b77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,19 +168,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv1 = open_viewer(\n",
+    "name = \"edges\"\n",
+    "\n",
+    "cv1 = show(\n",
+    "    objects[name],\n",
+    "    states[name], \n",
     "    cad_width=640, \n",
     "    height=480, \n",
+    "    ortho=True,\n",
+    "    control=\"orbit\",\n",
+    "    grid=(False, False, False),\n",
     "    tools=True,\n",
     "    pinning=True,\n",
-    ")\n",
-    "name = \"hexapod\"\n",
-    "cv1.add_shapes(\n",
-    "        objects[name],\n",
-    "        states[name],\n",
-    "        ortho=False,\n",
-    "        control=\"orbit\",\n",
-    "        grid=(False, False, False),\n",
     ")"
    ]
   },
@@ -146,19 +190,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv2 = open_viewer(\n",
+    "name = \"faces\"\n",
+    "\n",
+    "cv2 = show(\n",
+    "    objects[name],\n",
+    "    states[name], \n",
     "    cad_width=640, \n",
     "    height=480, \n",
-    "    tools=True,\n",
-    "    pinning=True\n",
-    ")\n",
-    "name = \"faces\"\n",
-    "cv2.add_shapes(\n",
-    "    objects[name],\n",
-    "    states[name],\n",
-    "    ortho=False,\n",
+    "    ortho=True,\n",
     "    control=\"orbit\",\n",
     "    grid=(False, False, False),\n",
+    "    tools=True,\n",
+    "    pinning=True,\n",
     ")"
    ]
   },
@@ -172,6 +215,14 @@
     "from ipywidgets.embed import embed_minimal_html\n",
     "# !!! sc.close()\n",
     "embed_minimal_html('export.html', views=[cv2.widget], title='Widgets export')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dee49a8-9747-4bdf-ac30-422ef5edc51c",
+   "metadata": {},
+   "source": [
+    "# Property access"
    ]
   },
   {
@@ -445,6 +496,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "23ed8dbe-8293-4bde-a8ef-91484fe406a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.grid = [not g for g in cv.widget.grid]\n",
+    "cv.axes = not cv.axes\n",
+    "cv.axes0 = not cv.axes0\n",
+    "cv.transparent = not cv.transparent\n",
+    "cv.black_edges = not cv.black_edges\n",
+    "cv.tools = not cv.tools\n",
+    "cv.ortho = not cv.ortho"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1135f786-8f67-40b1-9d37-07c7faaeda6f",
    "metadata": {},
    "outputs": [],
@@ -645,16 +712,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77997f4b-6c74-4f62-b257-9d7e06e62f74",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv = cv2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "176fb700-592d-4bd5-adfb-0728e5dde472",
    "metadata": {},
    "outputs": [],
@@ -766,22 +823,14 @@
   }
  ],
  "metadata": {
+  "language_info": {
+   "name": "python",
+   "pygments_lexer": "ipython3"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.12"
   }
  },
  "nbformat": 4,
