--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -11,6 +11,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7f959741-1cee-4936-a9a6-84aa45af0940",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sidecar import Sidecar\n",
+    "s = Sidecar(title=\"Test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e54596f1-61d6-4704-90de-a405f8fe6b00",
    "metadata": {},
    "outputs": [],
@@ -19,7 +30,8 @@
     "import json\n",
     "import time\n",
     "import ipywidgets as widgets\n",
-    "from cad_viewer_widget import AnimationTrack, show, open_viewer, close_viewer, close_viewers, get_viewer, get_viewers, get_default, set_viewer\n",
+    "from cad_viewer_widget import AnimationTrack, CadViewer\n",
+    "from cad_viewer_widget.sidecar import open_viewer, get_viewer, get_viewers, get_default, close_viewer, close_viewers\n",
     "from cad_viewer_widget.utils import numpyify\n",
     "\n",
     "names = [\"hexapod\", \"hexapod_m\", \"box\", \"box1\", \"boxes\", \"edges\", \"faces\", \"vertices\", \"pylones\", \"box-edges\", \"box-faces\", \"box-vertices\"]\n",
@@ -27,10 +39,10 @@
     "states = {}\n",
     "\n",
     "for name in names:\n",
-    "    with open(f\"examples/{name}.json\", \"r\") as fd:\n",
+    "    with open(f\"../examples/{name}.json\", \"r\") as fd:\n",
     "        objects[name] = numpyify(json.load(fd))\n",
     "\n",
-    "    with open(f\"examples/{name}-states.json\", \"r\") as fd:\n",
+    "    with open(f\"../examples/{name}-states.json\", \"r\") as fd:\n",
     "        states[name] = json.load(fd)"
    ]
   },
@@ -45,16 +57,288 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46cd76a5-9eff-495d-8c07-a1346dab1b92",
+   "id": "63fc25e6-5394-4e9f-98c4-b5205c7cbf5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open_viewer(\n",
+    "     \"CQ1\", \n",
+    "     anchor=\"right\",\n",
+    "     height=480,\n",
+    "     cad_width=640,\n",
+    ")\n",
+    "cv = get_viewer(\"CQ1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96369f90-0ef4-4995-8fce-61e07bbb15ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open_viewer(\n",
+    "    \"CQ2\", \n",
+    "    anchor=\"tab\",\n",
+    "    height=480,\n",
+    "    cad_width=640,\n",
+    "    pinning=True\n",
+    ")\n",
+    "cv2 = get_viewer(\"CQ2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "126a73b8-88ae-4d14-ae73-f9b75c59713c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"vertices\"\n",
+    "cv.add_shapes(\n",
+    "    objects[name],\n",
+    "    states[name]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d20f6178-8d8e-4fc9-802c-b12405d8ab80",
    "metadata": {},
    "outputs": [],
    "source": [
     "name = \"edges\"\n",
+    "cv2.add_shapes(\n",
+    "    objects[name],\n",
+    "    states[name]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "154256cd-0130-49b9-bb3d-e88953ab90ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.disposed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf563b3b-5769-40e6-b3fd-bbcbf6272c1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.widget.disposed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba0782db-c4ba-4531-810d-1448a690c67a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0a45056-32e7-48a3-b89a-5590e6e9f738",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_viewer(\"CQ2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "402dd662-0a3c-4df1-ba1d-2d9fe85e249d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_viewers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd9dd77d-1b8b-40f5-9fd5-efa0b4cb0da6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "close_viewers()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2154be31-0407-4a87-91b4-100e135c7d08",
+   "metadata": {},
+   "source": [
+    "# Cell Handling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b6645d7-44fa-4081-948c-f1101c2186cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv3 = open_viewer(\n",
+    "     height=480,\n",
+    "     cad_width=640,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f56f62ad-86c6-4728-bea3-4f0d5d172cc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"vertices\"\n",
+    "cv3.add_shapes(\n",
+    "    objects[name],\n",
+    "    states[name]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db8eafbf-0ee8-47fd-83ab-fb7ee3ef1bfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv3.disposed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f76dd5f-0723-44fd-b83d-2a7f09f899fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv4 = open_viewer(\n",
+    "    height=600,\n",
+    "    cad_width=800,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9439f0b5-21df-416c-b06c-70323e38dcce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"boxes\"\n",
+    "cv4.add_shapes(\n",
+    "    objects[name],\n",
+    "    states[name]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1694d8d-66d7-4537-b144-c0e6fdf15d12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64a0ccd7-abbc-4f8a-8c53-265b3e406b51",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7eb42c7-edcd-404b-9528-538281b90791",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21d0d3c2-fd01-4e03-b9a3-1cfc31b6dfc6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68954874-8a5b-4f82-a401-226ffe8cf584",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28d65336-9e60-424c-8ae6-dc3b1f40c428",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "700845b9-9c1f-41bb-bf5c-63f6986e991f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19c7dc14-81ab-4b1a-95d1-5373a0a03fb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SIDECARS = {}\n",
+    "def open_viewer(title, anchor=\"right\", **kwargs):\n",
+    "    viewer = get_viewer(title)\n",
+    "    print(\"viewer\", viewer)\n",
+    "    if viewer is not None and not viewer.disposed:\n",
+    "        viewer.execute(\"dispose\", None)\n",
+    "        print(f\"Closed existing viewer {title}\")\n",
+    "\n",
+    "    cv = CadViewer(sidecar=title, anchor=anchor, **kwargs)\n",
+    "    SIDECARS[title] = cv\n",
+    "    display(cv.widget)\n",
+    "    print(f'Done, see viewer {title}. To access the viewer, use get_viewer(\"{title}\")')\n",
+    "open_viewer(\"CQ1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46cd76a5-9eff-495d-8c07-a1346dab1b92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"faces\"\n",
     "cv1 = show(\n",
     "    objects[name],\n",
     "    states[name],\n",
-    "    height=800,\n",
-    "    sidecar=\"CQ1\", #anchor=\"right\",\n",
+    "    height=480,\n",
+    "    cad_width=640,\n",
+    "    sidecar=\"CQ1\", anchor=\"tab\", \n",
     "    ortho=True,\n",
     "    control=\"trackball\",\n",
     "    grid=(False, False, False),\n",
@@ -68,11 +352,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"faces\"\n",
+    "name = \"edges\"\n",
     "cv2 = show(\n",
     "    objects[name],\n",
     "    states[name],\n",
-    "    sidecar=\"CQ2\", #anchor=\"right\",\n",
+    "    # sidecar=\"CQ2\", anchor=\"split-right\",\n",
     "    ortho=True,\n",
     "    control=\"trackball\",\n",
     "    grid=(False, True, False),\n",
@@ -83,12 +367,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f40988e2-bc9b-4ce7-b58c-5d90a683b9ca",
+   "id": "cebc816b-7500-499f-a89a-bea9bbccf198",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"vertices\"\n",
-    "cv = show(objects[name], states[name])"
+    "cv = show(objects[name], states[name], pinning=True)\n",
+    "cv.execute(\"viewer.pinAsPng\", None)"
    ]
   },
   {
@@ -253,7 +537,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.js_debug = True"
+    "cv.js_debug = False"
    ]
   },
   {
